# HashLibPlus

./: CMakeLists.txt  HashLibPlus.cpp  LICENSE  README.md
Base/: Hash.cpp  Hash.h  HashBuffer.h  HashCryptoNotBuildIn.h  HashFactory.cpp  HashFactory.h  HashResult.cpp  HashResult.h  MultipleTransformNonBlock.h
Checksum/: Adler32.h  CRC.h  CRC16.h  CRC32.h  CRC32Fast.h  CRC64.h
Crypto/: Blake2B.cpp  Blake2B.h  Blake2BP.h  Blake2S.cpp  Blake2S.h  Blake2SP.h  Blake3.h  GOST3411_2012.h  Gost.h  Grindahl256.h  Grindahl512.h  HAS160.h  Haval.h  MD2.h  MD4.h  MD5.h  MDBase.h  Panama.h  RIPEMD.h  RIPEMD128.h  RIPEMD160.h  RIPEMD256.h  RIPEMD320.h  RadioGatun32.h  RadioGatun64.h  SHA0.h  SHA1.h  SHA2_224.h  SHA2_256.h  SHA2_256Base.h  SHA2_384.h  SHA2_512.h  SHA2_512Base.h  SHA2_512_224.h  SHA2_512_256.h  SHA3.h  Snefru.h  Tiger.h  Tiger2.h  WhirlPool.h
Enum/: Argon2Type.h  Argon2Version.h  HashRounds.h  HashSize.h
Hash128/: MurmurHash3_x64_128.h  MurmurHash3_x86_128.h  SipHash128.h
Hash32/: AP.h  BKDR.h  Bernstein.h  Bernstein1.h  DEK.h  DJB.h  ELF.h  FNV1a_32.h  FNV32.h  JS.h  Jenkins3.h  Murmur2_32.h  MurmurHash3_x86_32.h  OneAtTime.h  PJW.h  RS.h  Rotating.h  SDBM.h  ShiftAndXor.h  SuperFast.h  XXHash32.h
Hash64/: FNV1a64.h  FNV1a_64.h  FNV64.h  Murmur2_64.h  SipHash64.h  XXHash64.h
HashLibPlus.Tests/: HashLibPlus.Tests.cpp
HashLibPlus.Tests/Base/: Blake2BTestVectors.h  Blake2STestVectors.h  Blake3TestVectors.h  TestConstants.h
HashLibPlus.Tests/Checksum/: Test_Adler32.h  Test_CRC.h  Test_Crc32Castagnoli.h  Test_Crc32PKZip.h
HashLibPlus.Tests/Crypto/: Test_Blake2B.h  Test_Blake2BP.h  Test_Blake2S.h  Test_Blake2SP.h  Test_Blake3.h  Test_GOST3411_2012_256.h  Test_GOST3411_2012_512.h  Test_Gost.h  Test_Grindahl256.h  Test_Grindahl512.h  (+65 more)
Interfaces/: ICRC.h  IHash.h  IHashInfo.h  IHashResult.h  IIHash.h  IKDF.h
KDF/: KDFNotBuildIn.h  PBKDF2_HMACNotBuildIn.h  PBKDF_Argon2NotBuildIn.h  PBKDF_Blake3NotBuildIn.h  PBKDF_ScryptNotBuildIn.h
MAC/: Blake2BMACNotBuiltIn.h  Blake2SMACNotBuiltIn.h  HMACNotBuildInAdapter.h  KMACNotBuildInAdapter.h
NullDigest/: NullDigest.h
Nullable/: Nullable.h
Params/: Argon2Parameters.h  Blake2BParams.cpp  Blake2BParams.h  Blake2SParams.cpp  Blake2SParams.h  Blake2XBParams.h  Blake2XSParams.h
Utils/: ArrayUtils.h  BitConverter.cpp  BitConverter.h  Bits.h  Converters.h  HashLibTypes.h  Utils.h
(+57 files in other folders)
